syntax = "proto3";
package tak1827.lightnftindexer.data;

option go_package   = "github.com/tak1827/light-nft-indexer/data";
option optimize_for = CODE_SIZE;

import "google/protobuf/timestamp.proto";

message NFTContract {
  string address     = 1;
  string name        = 2;
  string symbol      = 3;
  uint64 totalSupply = 4;

  reserved 5, 6;

  // repeated string token_ids = 7;

  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message Token {
  string    address  = 1;
  string    token_id = 2;
  string    owner    = 3;
  TokenMeta meta     = 4;

  reserved 5, 6;

  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message TokenMeta {
  string origin = 1;

  reserved 2;

  TokenMetaImage image          = 3;
  uint32         time_of_expire = 4;

  reserved 5;
  MetaStandard standard = 6;

  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

// OpenSea Metadata Standard
// https://docs.opensea.io/docs/metadata-standards
message MetaStandard {
  string name         = 1;
  string description  = 2;
  string external_url = 3;
  string image        = 4;
}

message TokenMetaImage {
  ImageType type = 1;
  string    data = 2;
}

enum ImageType {
  IMAGE_TYPE_UNSPECIFIED = 0;
  IMAGE_TYPE_NATIVE      = 1;
  IMAGE_TYPE_REFERENCE   = 2;
}

message TransferHistory {
  string address  = 1;
  string token_id = 2;
  string from     = 3;
  string to       = 4;

  reserved 5, 6;

  uint64 block_number       = 7;
  uint32 index_log_in_block = 8;

  google.protobuf.Timestamp created_at = 10;
}
